--- a/opdracht3/package.json
+++ b/opdracht3/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "node-sass": "^4.8.3",
     "request": "^2.85.0"
   },
   "devDependencies": {
