--- a/opdracht3/package.json
+++ b/opdracht3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oba-server-side",
+  "name": "boodschappenlijst",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -7,14 +7,13 @@
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Max de Vries",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "node-sass": "^4.8.3",
     "request": "^2.85.0"
   },
   "devDependencies": {
